Implement backend for LE-ToDo application with API, database, and business logic. Added models, services, and controllers for todo items, along with initial migrations and configuration for SQLite. Set up project structure for client and server components.

--- a/.gitignore
+++ b/.gitignore
@@ -1,41 +1,36 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Solution / IDE
+.vs/
+*.user
+*.suo
 
-# dependencies
-/node_modules
-/.pnp
+# Build outputs
+[Bb]in/
+[Oo]bj/
+**/out/
+
+# Node (client)
+**/node_modules/
+**/.next/
+**/.pnp
 .pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
+**/coverage/
+**/build/
 
-# testing
-/coverage
-
-# next.js
-/.next/
-/out/
-
-# production
-/build
-
-# misc
+# Misc
 .DS_Store
 *.pem
+*.tsbuildinfo
+**/next-env.d.ts
+.env*
 
-# debug
+# Local DB (e.g. SQLite)
+*.db
+*.db-shm
+*.db-wal
+
+# Debug / Vercel
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
-
-# env files (can opt-in for committing if needed)
-.env*
-
-# vercel
 .vercel
-
-# typescript
-*.tsbuildinfo
-next-env.d.ts
