--- a/le-todo-client/.env.example
+++ b/le-todo-client/.env.example
@@ -1,5 +1,6 @@
 # Copy to .env.local and set your values.
 # See https://nextjs.org/docs/app/building-your-application/configuring/environment-variables
 
-# Base URL of the LE-ToDo API (default: http://localhost:5203)
-NEXT_PUBLIC_API_URL=http://localhost:5203
+# Base URL of the LE-ToDo API (default: https://localhost:7298)
+NEXT_PUBLIC_API_URL=https://localhost:7298
+
